--- a/styles/header.css
+++ b/styles/header.css
@@ -1,8 +1,4 @@
-.search-bar{
-  font-size: 20px;
-  margin-left: 12px;
-  display: block;
-}
+
 .header{
   height: 55px;
   display: flex;
@@ -11,18 +7,91 @@
 }
 
 .left-section{
-  background-color: lightblue;
-  width: 150px;
+  align-items: center;
+  display: flex;
 
 }
 .middle-section{
-  background-color: lightpink;
   flex: 1;
   margin-left: 70px;
   margin-right: 35px;
   max-width: 500px;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+
 }
 .right-section{
-  background-color:lightblue;
-  width: 200px;
+  margin-right: 20px;
+  width: 180px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-shrink: 0;
+}
+.search-bar{
+  width: 0;
+  flex: 1;
+  height: 36px;
+  padding-left: 10px;
+  font-size: 16px;
+  border-width: 1px;
+  border-style: solid;
+  border-color:rgb(192,192,192);
+  border-radius: 2px;
+  box-shadow: inset 1px 2px 3px rgba(0,0,0,0.05)
+}
+.search-bar::placeholder{
+  font-family:Roboto, Arial;
+  font-size: 16px;
+}
+.hamburger-menu{
+  height: 24px;
+  margin-left: 24px;
+  margin-right: 24px;
+}
+.youtube-logo{
+  height: 20px;
+}
+
+.search-button{
+  height: 40px;
+  width: 66px;
+  background-color:rgb(240,240,240);
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(192,192,192);
+  margin-left: -1px;
+}
+.search-icon{
+  height: 25px;
+  margin-right: 10px;
+  margin-top: 4px;
+  
+}
+.voice-search-button{
+  height: 40px;
+  width: 40px;
+  border-radius: 20px;
+  border: none;
+  margin-left: 20px;
+  background-color: rgb(248,248,248);
+}
+.voice-search-icon{
+  height: 24px;
+  margin-top: 4px;
+  
+}
+.upload-icon{
+  height: 24px;
+}
+.youtube-apps{
+  height: 24px;
+}
+.notifications-icon{
+  height: 24px;
+}
+.current-user-picture{
+  height: 32px;
+  border-radius: 16px;
 }
