--- a/styles/header.css
+++ b/styles/header.css
@@ -100,7 +100,27 @@
 .notifications-icon{
   height: 24px;
 }
+.notifications-icon-container{
+  position: relative;
+
+}
+.notifications-count{
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background-color: rgb(200,0,0);
+  color: white;
+  font-family: Roboto, Arial;
+  font-size: 11px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border-radius: 10px;
+
+}
 .current-user-picture{
   height: 32px;
   border-radius: 16px;
 }
+
