--- a/styles/header.css
+++ b/styles/header.css
@@ -8,6 +8,7 @@
   top: 0;
   right: 0;
   left: 0;
+  z-index: 100;
   background-color: white;
   border-bottom-width: 1px;
   border-bottom-style: solid;
