--- a/styles/header.css
+++ b/styles/header.css
@@ -49,7 +49,8 @@
   border-style: solid;
   border-color:rgb(192,192,192);
   border-radius: 2px;
-  box-shadow: inset 1px 2px 3px rgba(0,0,0,0.05)
+  box-shadow: inset 1px 2px 3px rgba(0,0,0,0.05);
+  position: relative;
 }
 .search-bar::placeholder{
   font-family:Roboto, Arial;
@@ -72,11 +73,10 @@
   border-style: solid;
   border-color: rgb(192,192,192);
   margin-left: -1px;
+  cursor: pointer;
 }
 .search-icon{
   height: 25px;
-  margin-right: 10px;
-  margin-top: 4px;
   
 }
 .voice-search-button{
@@ -84,7 +84,7 @@
   width: 40px;
   border-radius: 20px;
   border: none;
-  margin-left: 20px;
+
   background-color: rgb(248,248,248);
 }
 .voice-search-icon{
@@ -123,5 +123,48 @@
 .current-user-picture{
   height: 32px;
   border-radius: 16px;
+}
+
+.search-button,
+.voice-search-button,
+.upload-icon-container,
+.apps-icon-container,
+.notifications-icon-container,
+.current-user-container{
+ position: relative;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+}
+
+.search-button .tool-tip, 
+.voice-search-button .tool-tip,
+ .upload-icon-container .tool-tip,
+ .apps-icon-container .tool-tip,
+.notifications-icon-container .tool-tip,
+.current-user-container .tool-tip{
+  position: absolute;
+  font-family: Roboto, Arial;
+  background-color: gray;
+  color: white;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 8px;
+  padding-right: 8px;
+  border-radius: 2px;
+  font-size: 12px;
+  bottom: -20px;
+  opacity: 0%;
+  transition: opacity 0.15s;
+  pointer-events: none;
+  white-space: nowrap;
+}
+.search-button:hover .tool-tip,
+.voice-search-button:hover .tool-tip,
+.upload-icon-container:hover .tool-tip,
+.apps-icon-container:hover .tool-tip,
+.notifications-icon-container:hover .tool-tip,
+.current-user-container:hover .tool-tip{
+  opacity: 100%;
 }
 
